Adicionado landing page e atualizado login e sign up

--- a/src/app/features/auth/components/login/login.component.scss
+++ b/src/app/features/auth/components/login/login.component.scss
@@ -9,7 +9,7 @@
 
 .logo-icon {
   font-size: 48px;
-  color: #f57c00;
+  color: #3a6ea5;
   margin-bottom: 12px;
 }
 
@@ -27,9 +27,10 @@
 .switch-text {
   margin-top: 16px;
   font-size: 14px;
+  color: #ffffff;
 
   a {
-    color: #f57c00;
+    color: #3a6ea5;
     text-decoration: none;
   }
 }
