Style: Main layoyt

--- a/src/app/features/pages/landing/landing.component.html
+++ b/src/app/features/pages/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="landing-container">
   <nav class="navbar">
     <img src="/icons/BloodHound-Logo.png" alt="Bloodhound Logo" class="logo" />
-    <button mat-raised-button color="primary">Sign In</button>
+    <button mat-raised-button color="primary" [routerLink]="'/auth/signin'">Sign In</button>
   </nav>
 
   <main class="main-content">
