Style: UI repositories

--- a/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
@@ -12,7 +12,7 @@
       <mat-icon>rule</mat-icon>
       Rules
     </a>
-    <a [routerLink]="'/repositories'" routerLinkActive="active">
+    <a [routerLink]="'/pages/main/repositories'" routerLinkActive="active">
       <mat-icon>storage</mat-icon>
       Repositories
     </a>
