Refactor: Atualizado dados mockados para cfe DTO da API

--- a/src/app/features/pages/repositories/repositories.component.html
+++ b/src/app/features/pages/repositories/repositories.component.html
@@ -4,13 +4,18 @@
     <button class="pick-button">Pick a repository</button>
   </div>
 
-  <div class="repo-card" *ngFor="let repo of repositories" (click)="navigateToPullRequests(repo.name)"
-    [class.hovered]="hoveredRepo === repo" (mouseenter)="hoveredRepo = repo" (mouseleave)="hoveredRepo = null">
+  <div class="repo-card"
+       *ngFor="let repo of repositories"
+       (click)="navigateToPullRequests(repo.name)"
+       [class.hovered]="hoveredRepo === repo"
+       (mouseenter)="hoveredRepo = repo"
+       (mouseleave)="hoveredRepo = null">
     <div class="repo-info">
       <img class="avatar" [src]="repo.avatarUrl" alt="Avatar" />
       <div class="text">
         <div class="name">{{ repo.name }}</div>
-        <div class="owner">{{ repo.owner }}</div>
+        <div class="owner">Owner ID: {{ repo.ownerId }}</div>
+        <div class="context">{{ repo.context }}</div>
       </div>
     </div>
     <button class="settings-button">Settings</button>
