Style: UI rules-list

--- a/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
@@ -8,7 +8,7 @@
       <mat-icon>dashboard</mat-icon>
       Dashboard
     </a>
-    <a [routerLink]="'/rules'" routerLinkActive="active">
+    <a [routerLink]="'/pages/main/rules'" routerLinkActive="active">
       <mat-icon>rule</mat-icon>
       Rules
     </a>
