Style: UI create-edit-rules

--- a/src/app/features/pages/rules-list/rules-list.component.scss
+++ b/src/app/features/pages/rules-list/rules-list.component.scss
@@ -9,7 +9,7 @@
   }
 
   .rule-chip {
-    background-color: #ff9800;
+    background-color: #457bb2;
     padding: 4px 8px;
     border-radius: 4px;
     font-family: monospace;
