feat: implementado login OAuth2 e atualizado rotas

--- a/src/app/features/auth/components/sign-in/sign-in.component.html
+++ b/src/app/features/auth/components/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
   <h2>Sign in</h2>
 
   <div class="card">
-    <button mat-button class="github-btn">
+    <button mat-button class="github-btn" (click)="loginWithGithub()">
       <mat-icon svgIcon="github"></mat-icon>
       <!-- Continue with GitHub -->
       Continuar com GitHub
