--- a/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
@@ -24,7 +24,7 @@
       Settings
     </a>
 
-    <button mat-button color="warn" class="signout-btn">
+    <button mat-button color="warn" class="signout-btn" (click)="logout()">
       <mat-icon>logout</mat-icon>
       Sign out
     </button>
