feat: Adicionado "loadin" ao aguardar login git

--- a/src/app/features/auth/auth-callback/auth-callback.component.html
+++ b/src/app/features/auth/auth-callback/auth-callback.component.html
@@ -1,4 +1,7 @@
-<div class="auth-callback">
+<!-- <div class="auth-callback">
   <mat-spinner diameter="40"></mat-spinner>
   <p>Autenticando com GitHub...</p>
+</div> -->
+<div class="spinner-container">
+  <mat-spinner diameter="60"></mat-spinner>
 </div>
