--- a/src/app/features/auth/auth-callback/auth-callback.component.scss
+++ b/src/app/features/auth/auth-callback/auth-callback.component.scss
@@ -7,3 +7,10 @@
   color: white;
   gap: 1rem;
 }
+
+.spinner-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
