--- a/src/app/features/auth/components/sign-in/sign-in.component.scss
+++ b/src/app/features/auth/components/sign-in/sign-in.component.scss
@@ -54,4 +54,11 @@
       }
     }
   }
+
+  .sign-in-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 }
