--- a/src/app/features/pages/rules-list/rules-list.component.html
+++ b/src/app/features/pages/rules-list/rules-list.component.html
@@ -13,10 +13,17 @@
       <td mat-cell *matCellDef="let rule">{{ rule.id }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="repositoryId">
+    <!-- <ng-container matColumnDef="repositoryId">
       <th mat-header-cell *matHeaderCellDef>Repository</th>
       <td mat-cell *matCellDef="let rule">
         <span class="rule-chip">{{ rule.repositoryId }}</span>
+      </td>
+    </ng-container> -->
+
+    <ng-container matColumnDef="repositoryName">
+      <th mat-header-cell *matHeaderCellDef>RepositoryName</th>
+      <td mat-cell *matCellDef="let rule">
+        <span class="rule-chip">{{ rule.repository.name }}</span>
       </td>
     </ng-container>
 
